2025-07-07T01:56:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16105802286 # 1083
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-07
* notice: last 14d: unq all: 42 84
* notice: prev accum: outdated-unq outdated-all / unq all: 4351 9114 / 4416 9197
* notice: next accum: outdated-unq outdated-all / unq all: 4354 9118 / 4421 9203
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -1 -1 / +7 +8 -0 -0 / 7 8
* notice: removed / changed dates: [2025-06-22] / [2025-06-23 2025-07-06]

2025-07-06T12:41:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16099126401 # 1082
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-06
* notice: last 14d: unq all: 41 80
* notice: prev accum: outdated-unq outdated-all / unq all: 4351 9114 / 4414 9195
* notice: next accum: outdated-unq outdated-all / unq all: 4351 9114 / 4416 9197
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-06-22 2025-07-06]

2025-07-06T01:59:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16094174665 # 1081
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-06
* notice: last 14d: unq all: 40 79
* notice: prev accum: outdated-unq outdated-all / unq all: 4347 9109 / 4413 9194
* notice: next accum: outdated-unq outdated-all / unq all: 4351 9114 / 4414 9195
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +6 +8 -0 -0 / 6 8
* notice: removed / changed dates: [2025-06-21] / [2025-06-22 2025-07-05]

2025-07-05T12:40:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16088208861 # 1080