@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-07T01:56:15Z",
-  "count_outdated" : 9118,
-  "uniques_outdated" : 4354,
-  "count" : 9203,
-  "uniques" : 4421,
+  "timestamp" : "2025-07-07T12:46:11Z",
+  "count_outdated" : 9120,
+  "uniques_outdated" : 4356,
+  "count" : 9233,
+  "uniques" : 4437,
   "clones" : [
-    {
-      "timestamp": "2025-06-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-06-24T00:00:00Z",
       "count": 6,
@@ -130,6 +121,15 @@
       "uniques": 7,
       "uniques_minmax": [ 2, 7 ],
       "uniques_decinc": [ 0, 7 ]
+    },
+    {
+      "timestamp": "2025-07-07T00:00:00Z",
+      "count": 30,
+      "count_minmax": [ 30, 30 ],
+      "count_decinc": [ 0, 30 ],
+      "uniques": 16,
+      "uniques_minmax": [ 16, 16 ],
+      "uniques_decinc": [ 0, 16 ]
     }
   ]
 }
