@@ -1,12 +1,7 @@
 {
-  "count": 84,
-  "uniques": 42,
+  "count": 113,
+  "uniques": 55,
   "clones": [
-    {
-      "timestamp": "2025-06-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-24T00:00:00Z",
       "count": 6,
@@ -71,6 +66,11 @@
       "timestamp": "2025-07-06T00:00:00Z",
       "count": 8,
       "uniques": 7
+    },
+    {
+      "timestamp": "2025-07-07T00:00:00Z",
+      "count": 30,
+      "uniques": 16
     }
   ]
 }
